--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,12 @@ services:
     env_file:
       - .env
 
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/ || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
 volumes:
   pgdata:
+
