--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,13 @@ services:
     restart: always
     env_file:
       - .env
+    working_dir: /code
+
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/ || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/ || exit 1"]
