--- a/simple-extraction-demo/docker-compose.yml
+++ b/simple-extraction-demo/docker-compose.yml
@@ -35,6 +35,12 @@ services:
       timeout: 10s
       retries: 3
 
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/ || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
 volumes:
   pgdata:
 
