--- a/k8s/01-secret.yaml
+++ b/k8s/01-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: postgres-secret
 type: Opaque
 data:
-  username: cG9zdGdyZXM=        # base64 encoded value of "postgres"
-  password: cGFzc3dvcmQ=        # base64 encoded value of "password"
+  username: cG9zdGdyZXM=        
+  password: cGFzc3dvcmQ=        
