--- a/k8s/03-postgres-pvc.yaml
+++ b/k8s/03-postgres-pvc.yaml
@@ -3,9 +3,10 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
 spec:
-  volumeName: postgres-pv         
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
+  volumeName: postgres-pv
+  storageClassName: ""        
