--- a/k8s/06-django-deployment.yaml
+++ b/k8s/06-django-deployment.yaml
@@ -62,13 +62,16 @@ spec:
                 secretKeyRef:
                   name: postgres-secret
                   key: password
+          volumeMounts:
+            - name: django-static
+              mountPath: /app/static
 
       containers:
         - name: django
           image: srishtisingh1/simple-extraction-demo:latest
+          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
           ports:
             - containerPort: 8000
-          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
           env:
             - name: DB_NAME
               value: "mydatabase"
@@ -90,6 +93,9 @@ spec:
                 secretKeyRef:
                   name: postgres-secret
                   key: password
+          volumeMounts:
+            - name: django-static
+              mountPath: /app/static
 
           readinessProbe:
             httpGet:
@@ -109,16 +115,8 @@ spec:
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: django-service
-spec:
-  selector:
-    app: django
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
-  type: NodePort
+
+      volumes:
+        - name: django-static
+          persistentVolumeClaim:
+            claimName: django-pvc
