--- a/k8s/06-django-deployment.yaml
+++ b/k8s/06-django-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: django-deployment
+  labels:
+    app: django
 spec:
   replicas: 1
   selector:
@@ -16,107 +18,37 @@ spec:
         - name: django-migrate
           image: srishtisingh1/simple-extraction-demo:latest
           command: ["python", "manage.py", "migrate"]
-          env:
-            - name: DB_NAME
-              value: "mydatabase"
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
-            - name: DB_HOST
-              value: "postgres"
-            - name: DB_PORT
-              value: "5432"
-            - name: DEBUG
-              value: "True"
-            - name: SECRET_KEY
-              value: "django-insecure-7j3t!5+^dfk(2a$9r*1zq8o#=+#7vv6bn6ll6hvn5+^)l^q7we"
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
-
-        - name: django-collectstatic
-          image: srishtisingh1/simple-extraction-demo:latest
-          command: ["python", "manage.py", "collectstatic", "--noinput"]
-          env:
-            - name: DB_NAME
-              value: "mydatabase"
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
-            - name: DB_HOST
-              value: "postgres"
-            - name: DB_PORT
-              value: "5432"
-            - name: DEBUG
-              value: "True"
-            - name: SECRET_KEY
-              value: "django-insecure-7j3t!5+^dfk(2a$9r*1zq8o#=+#7vv6bn6ll6hvn5+^)l^q7we"
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
+          envFrom:
+            - secretRef:
+                name: django-secret
           volumeMounts:
-            - name: django-static
-              mountPath: /app/static
+            - name: static-files
+              mountPath: /app/staticfiles
 
       containers:
         - name: django
           image: srishtisingh1/simple-extraction-demo:latest
-          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
           ports:
             - containerPort: 8000
-          env:
-            - name: DB_NAME
-              value: "mydatabase"
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
-            - name: DB_HOST
-              value: "postgres"
-            - name: DB_PORT
-              value: "5432"
-            - name: DEBUG
-              value: "True"
-            - name: SECRET_KEY
-              value: "django-insecure-7j3t!5+^dfk(2a$9r*1zq8o#=+#7vv6bn6ll6hvn5+^)l^q7we"
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
+          envFrom:
+            - secretRef:
+                name: django-secret
           volumeMounts:
-            - name: django-static
-              mountPath: /app/static
-
+            - name: static-files
+              mountPath: /app/staticfiles
           readinessProbe:
             httpGet:
               path: /
               port: 8000
             initialDelaySeconds: 10
             periodSeconds: 5
-            timeoutSeconds: 3
-            successThreshold: 1
-            failureThreshold: 3
-
           livenessProbe:
             httpGet:
               path: /
               port: 8000
-            initialDelaySeconds: 30
+            initialDelaySeconds: 15
             periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
-
       volumes:
-        - name: django-static
+        - name: static-files
           persistentVolumeClaim:
-            claimName: django-pvc
+            claimName: django-static-pvc
