--- a/k8s/06-django-deployment.yaml
+++ b/k8s/06-django-deployment.yaml
@@ -51,4 +51,4 @@ spec:
       volumes:
         - name: static-files
           persistentVolumeClaim:
-            claimName: django-static-pvc
+            claimName: django-pvc
