--- a/k8s/06-django-deployment.yaml
+++ b/k8s/06-django-deployment.yaml
@@ -16,109 +16,29 @@ spec:
         - name: django-migrate
           image: srishtisingh1/simple-extraction-demo:latest
           command: ["python", "manage.py", "migrate"]
-          env:
-            - name: DB_NAME
-              value: "mydatabase"
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
-            - name: DB_HOST
-              value: "postgres"
-            - name: DB_PORT
-              value: "5432"
-            - name: DEBUG
-              value: "True"
-            - name: SECRET_KEY
-              value: "django-insecure-7j3t!5+^dfk(2a$9r*1zq8o#=+#7vv6bn6ll6hvn5+^)l^q7we"
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
-
+          volumeMounts:
+            - name: media-storage
+              mountPath: /app/media
         - name: django-collectstatic
           image: srishtisingh1/simple-extraction-demo:latest
           command: ["python", "manage.py", "collectstatic", "--noinput"]
-          env:
-            - name: DB_NAME
-              value: "mydatabase"
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
-            - name: DB_HOST
-              value: "postgres"
-            - name: DB_PORT
-              value: "5432"
-            - name: DEBUG
-              value: "True"
-            - name: SECRET_KEY
-              value: "django-insecure-7j3t!5+^dfk(2a$9r*1zq8o#=+#7vv6bn6ll6hvn5+^)l^q7we"
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
+          volumeMounts:
+            - name: media-storage
+              mountPath: /app/media
 
       containers:
         - name: django
           image: srishtisingh1/simple-extraction-demo:latest
           ports:
             - containerPort: 8000
-          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
-          env:
-            - name: DB_NAME
-              value: "mydatabase"
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: username
-            - name: DB_HOST
-              value: "postgres"
-            - name: DB_PORT
-              value: "5432"
-            - name: DEBUG
-              value: "True"
-            - name: SECRET_KEY
-              value: "django-insecure-7j3t!5+^dfk(2a$9r*1zq8o#=+#7vv6bn6ll6hvn5+^)l^q7we"
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
+          envFrom:
+            - secretRef:
+                name: django-secret
+          volumeMounts:
+            - name: media-storage
+              mountPath: /app/media
 
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 8000
-            initialDelaySeconds: 10
-            periodSeconds: 5
-            timeoutSeconds: 3
-            successThreshold: 1
-            failureThreshold: 3
-
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 8000
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: django-service
-spec:
-  selector:
-    app: django
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8000
-  type: NodePort
+      volumes:
+        - name: media-storage
+          persistentVolumeClaim:
+            claimName: media-pvc
